YAML/tripviewer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  labels:
    app: tripviewer
spec:
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: node
        imagePullPolicy: Always
        image: "registryugf9246.azurecr.io/tripinsights/tripviewer:1.0"
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  labels:
    app: tripviewer
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: tripviewer
